--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,10 @@ html, body {
 body {
   background-color: #efefef;
   color: #333333;
-  padding: 0;
-  margin: 0; }
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center; }
 
 p {
   line-height: 1.75; }
@@ -37,18 +39,25 @@ a {
 *:focus {
   outline: none; }
 
-.parent {
-  width: 100%;
-  height: 100%;
-  display: table;
-  text-align: center; }
-  .parent > .child {
-    display: table-cell;
-    vertical-align: middle; }
-
 /*--------------------------------------------------------------
   2.0 Board
 --------------------------------------------------------------*/
+.board {
+  width: 500px;
+  height: 500px;
+  position: relative;
+  font-size: 0; }
+  .board .cell {
+    border: 1px solid;
+    float: left;
+    width: 32%;
+    height: 32%;
+    font-size: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+
 /*--------------------------------------------------------------
   3.0 Footer
 --------------------------------------------------------------*/
