--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,8 +23,10 @@ body {
   @extend %primaryfont;
   background-color: $primary;
   color: $secondary;
-  padding: 0;
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 p {
@@ -44,21 +46,28 @@ a {
   outline: none;
 }
 
-.parent {
-  width: 100%;
-  height: 100%;
-  display: table;
-  text-align: center;
-  > .child {
-    display: table-cell;
-    vertical-align: middle;
-  }
-}
 
 /*--------------------------------------------------------------
   2.0 Board
 --------------------------------------------------------------*/
+.board {
+  width: 500px;
+  height: 500px;
+  position: relative;
+  font-size: 0;
 
+  .cell {
+    border: 1px solid;
+    float: left;
+    width: 32%;
+    height: 32%;
+    font-size: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 /*--------------------------------------------------------------
   3.0 Footer
