--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ html, body {
   -webkit-font-smoothing: antialiased; }
 
 body {
-  background-color: #efefef;
-  color: #333333;
+  background-color: #424242;
+  color: white;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -28,13 +28,13 @@ p {
 
 a {
   text-decoration: none;
-  color: #efefef;
+  color: #424242;
   -webkit-transition: color 0.2s ease-in-out;
   -moz-transition: color 0.2s ease-in-out;
   -o-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out; }
   a:hover {
-    color: #a7a7a7; }
+    color: #2e2e2e; }
 
 *:focus {
   outline: none; }
@@ -42,13 +42,35 @@ a {
 /*--------------------------------------------------------------
   2.0 Board
 --------------------------------------------------------------*/
+#new-game {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  background-color: #616161;
+  color: white;
+  margin: 2em;
+  padding: 1em;
+  -webkit-transition: background-color 0.2s ease-in-out;
+  -moz-transition: background-color 0.2s ease-in-out;
+  -o-transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out; }
+  #new-game:hover {
+    background-color: #757575;
+    cursor: pointer; }
+
+#notice {
+  height: 100px;
+  font-size: 1.5em;
+  font-weight: bold; }
+
 .board {
   width: 500px;
   height: 500px;
   position: relative;
-  font-size: 0; }
+  font-size: 0;
+  color: #66BB6A; }
   .board .cell {
-    border: 1px solid;
     float: left;
     width: 32%;
     height: 32%;
@@ -57,6 +79,15 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center; }
+    .board .cell.alt {
+      color: #FFF176; }
+    .board .cell:nth-child(1), .board .cell:nth-child(2), .board .cell:nth-child(4), .board .cell:nth-child(5) {
+      border-right: 1px solid #999999;
+      border-bottom: 1px solid #999999; }
+    .board .cell:nth-child(3), .board .cell:nth-child(6) {
+      border-bottom: 1px solid #999999; }
+    .board .cell:nth-child(7), .board .cell:nth-child(8) {
+      border-right: 1px solid #999999; }
 
 /*--------------------------------------------------------------
   3.0 Footer
