--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@
 
 @import 'mixins';
 %primaryfont { font-family: 'Lato', sans-serif; }
-$primary: #efefef;
+$primary: #424242;
 $secondary: #333333;
 
 /*--------------------------------------------------------------
@@ -22,7 +22,7 @@ html, body {
 body {
   @extend %primaryfont;
   background-color: $primary;
-  color: $secondary;
+  color: white;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -50,14 +50,36 @@ a {
 /*--------------------------------------------------------------
   2.0 Board
 --------------------------------------------------------------*/
+#new-game {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  background-color: #616161;
+  color: white;
+  margin: 2em;
+  padding: 1em;
+  @include transition(background-color .2s ease-in-out);
+  &:hover {
+    background-color: #757575;
+    cursor: pointer;
+  }
+}
+
+#notice {
+  height: 100px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
 .board {
   width: 500px;
   height: 500px;
   position: relative;
   font-size: 0;
+  color: #66BB6A;
 
   .cell {
-    border: 1px solid;
     float: left;
     width: 32%;
     height: 32%;
@@ -66,6 +88,19 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    &.alt {
+      color: #FFF176;
+    }
+    &:nth-child(1), &:nth-child(2), &:nth-child(4), &:nth-child(5) {
+      border-right: 1px solid #999999;
+      border-bottom: 1px solid #999999;
+    }
+    &:nth-child(3), &:nth-child(6){
+      border-bottom: 1px solid #999999;
+    }
+    &:nth-child(7), &:nth-child(8){
+      border-right: 1px solid #999999;
+    }
   }
 }
 
