--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 ----------------------------------------------------------------
 1.0 Defaults
 2.0 Timer
-3.0 Footer
+3.0 Modal
 --------------------------------------------------------------*/
 body {
   font-family: 'Lato', sans-serif; }
@@ -28,13 +28,13 @@ p {
 
 a {
   text-decoration: none;
-  color: #424242;
+  color: #4FC3F7;
   -webkit-transition: color 0.2s ease-in-out;
   -moz-transition: color 0.2s ease-in-out;
   -o-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out; }
   a:hover {
-    color: #2e2e2e; }
+    color: #3f9cc6; }
 
 *:focus {
   outline: none; }
@@ -90,7 +90,66 @@ a {
       border-right: 1px solid #999999; }
 
 /*--------------------------------------------------------------
-  3.0 Footer
+  3.0 Modal
 --------------------------------------------------------------*/
+a#instructions {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.5em;
+  font-size: 2em;
+  color: #999999;
+  -webkit-transition: color 0.2s ease-in-out;
+  -moz-transition: color 0.2s ease-in-out;
+  -o-transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out; }
+  a#instructions:hover {
+    color: white;
+    cursor: pointer; }
+
+.modalDialog {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  color: #455A64;
+  background: rgba(255, 255, 255, 0.5);
+  z-index: 99999;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+  pointer-events: none; }
+  .modalDialog:target {
+    opacity: 1;
+    pointer-events: auto; }
+  .modalDialog > div {
+    width: 400px;
+    position: relative;
+    margin: 10% auto;
+    padding: 40px 60px 60px 60px;
+    background: #fff; }
+    @media only screen and (max-width: 40em) {
+      .modalDialog > div {
+        width: 250px; } }
+  .modalDialog .close {
+    background: white;
+    color: black;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 2em;
+    font-weight: 100;
+    padding: 0.4em 0.6em;
+    text-align: center;
+    text-decoration: none;
+    -webkit-transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.1s ease-in-out;
+    -o-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out; }
+    .modalDialog .close:hover {
+      color: #424242; }
 
 /*# sourceMappingURL=style.css.map */
